2002-03-05  Gregory John Casamento <greg_casamento@yahoo.com>

	* NSOutlineView-test/NSOutlineView-test.m made modifications
	to the [NSOutlineViewTest -outlineView:child:ofItem:] method
	to return children starting from zero instead of one.

2002-03-05  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* NSTableView-test/NSTableView-test.m ([NSTableViewTest -init]): 
	Set minWidth for all columns. Don't call sizeToFit: anymore.

Mon Mar  4 09:31:04 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* main.m (main): Set to nil the listed test instances at startup;
	do not dealloc pools after termination of program.
	([Controller -dealloc]): Destroy the test instances.
	([Controller -loadAndStartTestWithBundlePath:]): Autorelease the
	returned object.
	([Controller -startListedTest:]): Retain the new bundle principal
	class instance.
	([Controller -applicationWillTerminate:]): New method.
	
Sat Feb 27 01:54:10 2002  Gregory Casamento <greg_casamento@yahoo.com>

	* NSOutlineView-test/NSOutlineView-test.m:  Added code to test
	indentation in NSOutlineView.

Sat Feb 23 13:08:47 2002  Gregory Casamento <greg_casamento@yahoo.com>

	* NSOutlineView-test/NSOutlineView-test.m:  Further improvements
	to this test bundle to exercise NSOutlineView.

Sat Feb 23 13:08:47 2002  Gregory Casamento <greg_casamento@yahoo.com>

	* Added NSOutlineView-test.m to the test directory.

Wed Feb 20 19:28:52 2002  Nicola Pero  <nicola@brainstorm.co.uk>

	Moved the memory panel into gnustep-gui so all apps have it.  To
	get the memory panel with new apps click on application icon in
	the info panel (works for any app).
	* MemoryPanel.m: Removed.
	* MemoryPanel.h: Removed.
	* main.m: Do not include MemoryPanel.h.
	(main): Do not add the memory panel submenu.
	* GNUmakefile: Do not compile MemoryPanel.m
	
Wed Jan 16 22:12:24 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* NSSlider-test/NSSlider-test.m ([-init]): Added enable/disable
	buttons to enable/disable the sliders.